# openbanking-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: com.misperritas-mcp.sync.plist  com.openbanking-mcp.sync.plist
src/finmcp/: __init__.py  cli.py  config.py  util.py
src/finmcp/analytics/: anomalies.py  categories.py  categorization.py  subscriptions.py  summaries.py
src/finmcp/db/: models.py  queries.py  repo.py  session.py
src/finmcp/importers/: csv_import.py
src/finmcp/mcp/: server.py
src/finmcp/providers/: base.py  factory.py  types.py
src/finmcp/providers/enablebanking/: auth.py  client.py  mapper.py
src/finmcp/providers/gocardless/: auth.py  client.py  mapper.py
src/finmcp/providers/truelayer/: auth.py  client.py  mapper.py
src/finmcp/security/: tokens.py
src/finmcp/sync/: service.py
tests/: conftest.py  test_anomalies.py  test_categories.py  test_categorization.py  test_config.py  test_csv_import.py  test_enablebanking_mapper.py  test_gocardless_mapper.py  test_mapper.py  test_subscriptions.py  test_summaries.py  test_sync.py  test_util.py
